alignment fixed

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -29,9 +29,7 @@
 }
 
 .Weather canvas {
-  margin-right: 10px;
-  margin-top: 5px;
-  display: inline-block;
+  margin: 10px auto;
 }
 
 .Weather .temperature {
